--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -15,3 +15,9 @@ h5 {
   font-weight: bold;
   color: rgb(7, 41, 7);
 }
+
+.portfolioPage .btn {
+  background: rgb(7, 41, 7) !important;
+  color: rgba(245, 245, 245, 0.5) i !important;
+  border: 2px rgb !important;
+}
