started switching portfolio page over to mapping

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -21,3 +21,7 @@ h5 {
   color: rgba(245, 245, 245, 0.5) i !important;
   border: 2px rgb !important;
 }
+
+.portfolioPage {
+  background-image: url("../Images/tree_picture.png");
+}
