map portfolio cards onto container

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -25,3 +25,9 @@ h5 {
 .portfolioPage {
   background-image: url("../Images/tree_picture.png");
 }
+
+.portfolioContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
