--- a/client/src/styles/HomePage.css
+++ b/client/src/styles/HomePage.css
@@ -6,3 +6,14 @@ p {
   font-weight: bold;
   color: rgb(7, 41, 7);
 }
+
+i {
+  font-size: 4rem;
+}
+
+.footer-background {
+  background-color: rgb(245, 245, 245, 0.6);
+}
+.homeNav {
+  background: transparent !important;
+}
