--- a/client/src/styles/Portfolio.css
+++ b/client/src/styles/Portfolio.css
@@ -31,3 +31,10 @@ h5 {
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+.portfolioPage {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
