added containers and responsive navbar to homepage

--- a/client/src/styles/HomePage.css
+++ b/client/src/styles/HomePage.css
@@ -17,3 +17,10 @@ i {
 .homeNav {
   background: transparent !important;
 }
+
+.homePage {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
