portfolio page responsive except buttons

--- a/client/src/styles/Portfolio.css
+++ b/client/src/styles/Portfolio.css
@@ -30,11 +30,27 @@ h5 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-.portfolioPage {
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+/* Small devices */
+@media only screen and (max-width: 1024px) {
+  .portfolioPage {
+    background-image: url(../Images/mountainView2.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  body {
+    display: inline;
+  }
+}
+/* Large devices (laptops/desktops, 1024px and up) */
+@media only screen and (min-width: 1025px) {
+  .portfolioPage {
+    background-image: url(../Images/tree_picture.png);
+    background-size: cover;
+    background-position: top left;
+    background-repeat: no-repeat;
+  }
 }
