--- a/client/src/styles/HomePage.css
+++ b/client/src/styles/HomePage.css
@@ -35,7 +35,7 @@ i {
     background-position: center;
     background-repeat: no-repeat;
   }
-  body {
+  .homePage body {
     display: flex;
   }
 }
