--- a/client/src/components/projectCard.css
+++ b/client/src/components/projectCard.css
@@ -1,3 +1,11 @@
+.linksRight {
+  justify-content: flex-end;
+}
+
+.card {
+  background-color: rgba(245, 245, 245, 0.5);
+}
+
 @media only screen and (min-width: 992px) {
   .projectCard {
     width: 48%;
