--- a/client/src/styles/Portfolio.css
+++ b/client/src/styles/Portfolio.css
@@ -39,3 +39,6 @@ h5 {
     background-repeat: no-repeat;
   }
 }
+
+/* Make Portfolio card buttons responsive */
+/* Figure out how to add back in animations without margins - Do I even want them back?? */
