--- a/client/src/components/projectCard.css
+++ b/client/src/components/projectCard.css
@@ -6,13 +6,23 @@
   background-color: rgba(245, 245, 245, 0.5);
 }
 
+.projectBtn {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
 @media only screen and (min-width: 992px) {
   .projectCard {
     width: 48%;
   }
 }
+
 @media only screen and (max-width: 991px) {
   .projectCard {
     width: 70%;
+  }
+  .projectBtn {
+    margin-top: 4px;
+    margin-bottom: 4px;
   }
 }
