--- a/client/src/styles/HomePage.css
+++ b/client/src/styles/HomePage.css
@@ -32,7 +32,7 @@ i {
   .homePage {
     background-image: url(../Images/tree_picture2.png);
     background-size: cover;
-    background-position: top left;
+    background-position: center;
     background-repeat: no-repeat;
     display: inline-block;
   }
